--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "GameSettings": {
+    "TimeLimits": {
+      "Enabled": true,
+      "Level1": 60,
+      "Level2": 120,
+      "Level3": 180
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
